Add Eigen library linkage to test executable in CMake configuration

--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -1,1 +1,5 @@
+# Define an executable target from main.cpp
 add_executable(testexe main.cpp)
+
+# Link Eigen library to the testexe executable
+target_link_libraries(testexe PRIVATE Eigen)
