Integrate CUDA support and refactor project structure by removing Eigen dependencies, adding CCCL, openmp and updating CMake configurations.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,21 @@
-# Set the minimum required CMake version and enforce it strictly
 cmake_minimum_required(VERSION 3.28 FATAL_ERROR)
 
-# Define the project name
-project(testproj)
+project(testproj LANGUAGES CXX)
 
-# Store compiled executables in a separate folder
+enable_language(CUDA)
+
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/executable)
-
-# Export compile_commands.json for reviewing compilation details
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# Load CPM (CMake Package Manager) for dependency management
+
+set(CMAKE_CUDA_ARCHITECTURES 80)
+
 include(cmake/CPM.cmake)
+include(cmake/cccl.cmake)
 
-# Load Eigen library settings
-include(cmake/eigen.cmake)
+find_package(CUDAToolkit)
+find_package(OpenMP)
 
-# Include the "header" directory for header files
 include_directories(header)
 
-# Add the "src" directory as a subdirectory for compilation
 add_subdirectory(src)
