Refactor project structure: remove old main and header files, add new header and main files with CUDA support, and update CMake configuration for improved build process.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,14 @@
-# Add the "main" directory as a subdirectory for compilation
-add_subdirectory(main)
+# can be used to compile cpp files using nvcc
+set_source_files_properties(main.cpp PROPERTIES LANGUAGE CUDA)
+
+# Define an executable target from main.cpp
+add_executable(testexe main.cpp)
+
+# Link Eigen library to the testexe executable
+target_link_libraries(testexe PRIVATE CCCL::CUB CCCL::Thrust )
+target_link_libraries(testexe PRIVATE CUDA::cudart)
+
+if(OPENMP_FOUND)
+    target_link_libraries(testexe PRIVATE OpenMP::OpenMP_CXX) 
+    target_compile_options(testexe PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:${OpenMP_CXX_FLAGS}>)
+endif()
