Refactor CMake configuration: remove redundant find_package calls for CUDA and OpenMP in CMakeLists.txt, and clean up main.cpp by removing an unnecessary blank line.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,8 +6,12 @@ add_executable(testexe main.cpp)
 
 # Link Eigen library to the testexe executable
 target_link_libraries(testexe PRIVATE CCCL::CUB CCCL::Thrust )
+
+
+find_package(CUDAToolkit)
 target_link_libraries(testexe PRIVATE CUDA::cudart)
 
+find_package(OpenMP)
 if(OPENMP_FOUND)
     target_link_libraries(testexe PRIVATE OpenMP::OpenMP_CXX) 
     target_compile_options(testexe PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:${OpenMP_CXX_FLAGS}>)
