--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,28 @@
 cmake_minimum_required(VERSION 3.22 FATAL_ERROR)
 
-project(testproj LANGUAGES CXX)
-
-enable_language(CUDA)
+project(
+   cmake_test
+   LANGUAGES CXX
+)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/executable)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-set(CMAKE_CUDA_ARCHITECTURES 80)
+if (NOT EXISTS ${CMAKE_BINARY_DIR}/CMakeCache.txt)
+  if (NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE "Debug" CACHE STRING "" FORCE)
+  endif()
+endif()
+
+include(CTest)
 
 include(cmake/CPM.cmake)
-include(cmake/cccl.cmake)
+include(cmake/Gtest.cmake)
 
 include_directories(header)
 
-add_subdirectory(src)
+add_subdirectory(tests)
