Add Boost and fmt libraries to CMake configuration and update main.cpp for MPI support

--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -3,4 +3,7 @@ add_executable(testexe main.cpp)
 
 # Link Eigen library to the testexe executable
 target_link_libraries(testexe PRIVATE Boost::headers)
-target_link_libraries(testexe PRIVATE Boost::program_options)
+target_link_libraries(testexe PRIVATE Boost::filesystem)
+target_link_libraries(testexe PRIVATE Boost::mpi)
+target_link_libraries(testexe PRIVATE Boost::serialization)
+target_link_libraries(testexe PRIVATE fmt)
