--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -2,4 +2,4 @@
 add_executable(testexe main.cpp)
 
 # Link Eigen library to the testexe executable
-target_link_libraries(testexe PRIVATE Eigen)
+target_link_libraries(testexe PRIVATE matplotlib_cpp)
